<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pic" >

    <ViewFlipper
        android:id="@+id/viewFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:id="@+id/linearLayout_cover"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout_main"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/str01"
                    android:textSize="50sp" />

                <Button
                    android:id="@+id/button_start"
                    android:layout_width="100dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:text="@string/str02"
                    android:background="@drawable/roundbutton"
                    android:textSize="40sp" />
            </LinearLayout>

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/linearLayout_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="gone"
                tools:context=".MainActivity" >

                <LinearLayout
                    android:id="@+id/linearLayout_equation"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView_firstNum"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView_operator"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView_secondNum"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView_equal"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="50sp" />

                    <TextView
                        android:id="@+id/textView_answer"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="50sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_status"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/button_answer"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="@string/str02"
                        android:background="@drawable/roundbutton"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_clear"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="@string/str03"
                        android:background="@drawable/roundbutton"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/textView_status"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/button_0"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="0"
                        android:background="@drawable/toby"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_1"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="1"
                        android:background="@drawable/thomas"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_2"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="2"
                        android:background="@drawable/percy"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_3"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="3"
                        android:background="@drawable/james"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_4"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="4"
                        android:background="@drawable/henry"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/button_5"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="5"
                        android:background="@drawable/gordon"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_6"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="6"
                        android:background="@drawable/emily"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_7"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="7"
                        android:background="@drawable/edward"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_8"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="8"
                        android:background="@drawable/diesel"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/button_9"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:text="9"
                        android:background="@drawable/dennis"
                        android:layout_margin="5dp"
                        android:textSize="30sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_settings"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_numberRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str04"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spin_numberRange"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_questionAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str05"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spin_questionAmount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_questionType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str06"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spin_questionType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_handleMethod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/str07"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spin_handleMethod"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_stats"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_currentStats"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str08"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_historyStats"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str09"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_clearHistory"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/str10"
                android:background="@drawable/roundbutton"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_wrongQuestion"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:text="@string/str11"
                android:background="@drawable/roundbutton"
                android:layout_margin="5dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView_wrongQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />
        </LinearLayout>
        
    </ViewFlipper>

</FrameLayout>